# master_research

crater_profile_estimation/: README.md  codex resume.txt  implementation.md  methodology.md  synthterrainのクレーター拡散とddr推定法.txt  synthterrainのクレーター断面モデルの処理法.txt  文献からの統計モデル.md
crater_profile_estimation/output/: example_likelihood_D20m_S10deg_sigma2deg.csv  likelihood_D5m_S10deg_sigma2deg.csv  profile_D5m_S10deg_sigma2deg_equal_scale.csv  summary_D5m_S10deg_sigma2deg.json  synthterrain_D20m_vs_estimated.json  synthterrain_D20m_vs_estimated_without_pc.csv  synthterrain_D20m_vs_estimated_without_pc.json
crater_profile_estimation/tests/: test_cli.py  test_distributions.py  test_estimator.py
cratere_profile_estimation/: README.md  codex resume.txt  implementation.md  pyproject.toml
cratere_profile_estimation/output/: example_profile_D20m_S10deg_sigma2deg.csv  example_summary_D20m_S10deg_sigma2deg.json  profile.csv  profile_D5m_S10deg_sigma2deg.csv  summary.json  summary_D5m_S10deg_sigma2deg.json  summary_D5m_S10deg_sigma2deg_equal_scale.json  synthterrain_D20m_vs_estimated.csv
cratere_profile_estimation/src/crater_profile_estimation/: __init__.py  cli.py  comparison.py  distributions.py  estimator.py  plotting.py  profile.py
cratere_profile_estimation/tests/: conftest.py  test_cli.py  test_comparison.py  test_diffusion.py  test_estimator.py  test_lookup.py  test_profile.py
thesis_reproduction/: README.md  interactive_simulator.html  plot_ddr_vs_cr_current.py  reproduce_crater_lidar.py  resume_code_202620602.txt  synthterrain_crater_detector.html
(+25 files in other folders)
